<resources>
        <string name="app_name">Inventory App1</string>
        <string name="editor_activity">Edit a Product</string>
        <string name="new_product">Add new Product</string>
        <string name="product_title">Product name</string>
        <string name="price">Product price</string>
        <string name="quantity">Quantity</string>
        <string name="pub_name">Publisher name</string>
        <string name="pub_num">Publisher number</string>
        <string name="no_items">No items found in inventory, click add a Product to add a new one</string>
        <string name="edit">Edit Product</string>
        <string name="sell">Sell One</string>
        <string name="details">Product details</string>
        <string name="call_supplier">Call supplier</string>
        <string name="restock">Restock</string>
        <string name="sell_button">Sell</string>
        <string name="delete">Delete</string>
        <string name="price_text">Price : </string>
        <string name="available_text">Available : </string>
        <string name="pieces_text">pieces</string>
</resources>
