<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".EditorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/text_view_edit_activity"
                android:text="@string/product_title" />

            <EditText
                android:id="@+id/title_new"
                style="@style/edit_text_edit_activity"
                android:inputType="textCapSentences" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/text_view_edit_activity"
                android:text="@string/price" />

            <EditText
                android:id="@+id/price_new"
                style="@style/edit_text_edit_activity"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/text_view_edit_activity"
                android:text="@string/quantity" />

            <EditText
                android:id="@+id/quantity_new"
                style="@style/edit_text_edit_activity"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/text_view_edit_activity"
                android:text="@string/pub_name" />

            <EditText
                android:id="@+id/publisher_name_new"
                style="@style/edit_text_edit_activity"
                android:inputType="textCapSentences" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/text_view_edit_activity"
                android:text="@string/pub_num" />

            <EditText
                android:id="@+id/publisher_num_new"
                style="@style/edit_text_edit_activity"
                android:inputType="phone" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>